--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 
 data/MERIT
 
-**__pycache__/*
+src/*/*/__pycache__/*
+src/*/__pycache__/*
+__pycache__/*
 
 src/Figure.png
 src/Super Computer Scripts/test
