--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ src/*/*/__pycache__/*
 src/*/__pycache__/*
 __pycache__/*
 
+src/Super Computer Scripts/Mghydro/config.py
+
 src/Figure.png
 src/Super Computer Scripts/test
 src/Super Computer Scripts/Total_Phosphorus_mixed_forms_obs.json
