--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,15 @@ src/*/*/__pycache__/*
 src/*/__pycache__/*
 __pycache__/*
 
+src/Mghydro/Mghydro/map
+src/Mghydro/Mghydro/pkl
+src/Mghydro/py/__pycache__
+
+src/PySheds/data/Rasters/hyd_na*
+
 src/Super Computer Scripts/Mghydro/config.py
 
-src/Figure.png
+src/Read Shapefiles/Figure.png
 src/Super Computer Scripts/test
 src/Super Computer Scripts/Total_Phosphorus_mixed_forms_obs.json
 src/Super Computer Scripts/Mghydro/map/*
@@ -22,3 +28,4 @@ src/PySheds/output/watersheds.prj
 src/PySheds/output/watersheds.shp
 src/PySheds/output/watersheds.shx
 src/PySheds/data/n40w090_dem.tif.ovr
+src/Super Computer Scripts/Mghydro/config.py
